--- a/ExileCraft/modules/gui/uis/columns/left_column.ui
+++ b/ExileCraft/modules/gui/uis/columns/left_column.ui
@@ -8,11 +8,84 @@
     <x>0</x>
     <y>0</y>
     <width>438</width>
-    <height>662</height>
+       <height>664</height>
    </rect>
+  </property>
+     <property name="font">
+         <font>
+             <pointsize>14</pointsize>
+         </font>
   </property>
   <property name="windowTitle">
    <string>Form</string>
+  </property>
+     <property name="styleSheet">
+         <string notr="true">QComboBox {
+             border: 1px solid gray;
+             border-radius: 3px;
+             padding: 1px 18px 1px 3px;
+             min-width: 6em;
+             color: black;
+             font-size: 12px;
+             }
+
+             QComboBox::disabled {
+             opacity: .0;
+             }
+
+             QComboBox:editable {
+             background: white;
+             }
+
+             QComboBox:!editable, QComboBox::drop-down:editable {
+             background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+             stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
+             stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
+             }
+
+             /* QComboBox gets the &quot;on&quot; state when the popup is
+             open */
+             QComboBox:!editable:on, QComboBox::drop-down:editable:on {
+             background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+             stop: 0 #D3D3D3, stop: 0.4 #D8D8D8,
+             stop: 0.5 #DDDDDD, stop: 1.0 #E1E1E1);
+             }
+
+             QComboBox:on { /* shift the text when the popup opens */
+             padding-top: 3px;
+             padding-left: 4px;
+             }
+
+             QComboBox::drop-down {
+             subcontrol-origin: padding;
+             subcontrol-position: top right;
+             width: 15px;
+
+             border-left-width: 1px;
+             border-left-color: darkgray;
+             border-left-style: solid; /* just a single line */
+             border-top-right-radius: 3px; /* same radius as the QComboBox */
+             border-bottom-right-radius: 3px;
+             color: black;
+             }
+
+             QComboBox::down-arrow {
+             image: url(:/images/images/down_arrow.png);
+             }
+
+             QComboBox::down-arrow:on { /* shift the arrow when popup is open
+             */
+             top: 1px;
+             left: 1px;
+             }
+
+             QComboBox, QAbstractItemView {
+             border: 2px solid darkgray;
+             background-color: rgb(239, 239, 239);
+             selection-background-color: lightgray;
+             color: black;
+             }
+         </string>
   </property>
   <layout class="QVBoxLayout" name="main_pages_layout">
    <property name="spacing">
@@ -217,71 +290,13 @@
           </item>
           <item>
            <widget class="QComboBox" name="base_group_combobox">
+               <property name="font">
+                   <font>
+                       <pointsize>-1</pointsize>
+                   </font>
+               </property>
             <property name="styleSheet">
-             <string notr="true">QComboBox {
-                                                        border: 1px solid gray;
-                                                        border-radius: 3px;
-                                                        padding: 1px 18px 1px 3px;
-                                                        min-width: 6em;
-                                                        color: black;
-                                                        }
-
-                                                        QComboBox::disabled {
-                                                        opacity: .5;
-                                                        }
-
-                                                        QComboBox:editable {
-                                                        background: white;
-                                                        }
-
-                                                        QComboBox:!editable, QComboBox::drop-down:editable {
-                                                        background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                                        stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
-                                                        stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
-                                                        }
-
-                                                        /* QComboBox gets the &quot;on&quot; state when the popup is
-                                                        open */
-                                                        QComboBox:!editable:on, QComboBox::drop-down:editable:on {
-                                                        background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                                        stop: 0 #D3D3D3, stop: 0.4 #D8D8D8,
-                                                        stop: 0.5 #DDDDDD, stop: 1.0 #E1E1E1);
-                                                        }
-
-                                                        QComboBox:on { /* shift the text when the popup opens */
-                                                        padding-top: 3px;
-                                                        padding-left: 4px;
-                                                        }
-
-                                                        QComboBox::drop-down {
-                                                        subcontrol-origin: padding;
-                                                        subcontrol-position: top right;
-                                                        width: 15px;
-
-                                                        border-left-width: 1px;
-                                                        border-left-color: darkgray;
-                                                        border-left-style: solid; /* just a single line */
-                                                        border-top-right-radius: 3px; /* same radius as the QComboBox */
-                                                        border-bottom-right-radius: 3px;
-                                                        color: black;
-                                                        }
-
-                                                        QComboBox::down-arrow {
-                                                        image: url(:/images/images/down_arrow.png);
-                                                        }
-
-                                                        QComboBox::down-arrow:on { /* shift the arrow when popup is open
-                                                        */
-                                                        top: 1px;
-                                                        left: 1px;
-                                                        }
-
-                                                        QComboBox QAbstractItemView {
-                                                        border: 2px solid darkgray;
-                                                        selection-background-color: lightgray;
-                                                        color: black;
-                                                        }
-                                                    </string>
+                <string notr="true"/>
             </property>
             <property name="placeholderText">
              <string>Select a Base Group</string>
@@ -366,72 +381,6 @@
             <property name="enabled">
              <bool>false</bool>
             </property>
-            <property name="styleSheet">
-             <string notr="true">QComboBox {
-                                                        border: 1px solid gray;
-                                                        border-radius: 3px;
-                                                        padding: 1px 18px 1px 3px;
-                                                        min-width: 6em;
-                                                        color: black;
-                                                        }
-
-                                                        QComboBox::disabled {
-                                                        opacity: .5;
-                                                        }
-
-                                                        QComboBox:editable {
-                                                        background: white;
-                                                        }
-
-                                                        QComboBox:!editable, QComboBox::drop-down:editable {
-                                                        background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                                        stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
-                                                        stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
-                                                        }
-
-                                                        /* QComboBox gets the &quot;on&quot; state when the popup is
-                                                        open */
-                                                        QComboBox:!editable:on, QComboBox::drop-down:editable:on {
-                                                        background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                                        stop: 0 #D3D3D3, stop: 0.4 #D8D8D8,
-                                                        stop: 0.5 #DDDDDD, stop: 1.0 #E1E1E1);
-                                                        }
-
-                                                        QComboBox:on { /* shift the text when the popup opens */
-                                                        padding-top: 3px;
-                                                        padding-left: 4px;
-                                                        }
-
-                                                        QComboBox::drop-down {
-                                                        subcontrol-origin: padding;
-                                                        subcontrol-position: top right;
-                                                        width: 15px;
-
-                                                        border-left-width: 1px;
-                                                        border-left-color: darkgray;
-                                                        border-left-style: solid; /* just a single line */
-                                                        border-top-right-radius: 3px; /* same radius as the QComboBox */
-                                                        border-bottom-right-radius: 3px;
-                                                        color: black;
-                                                        }
-
-                                                        QComboBox::down-arrow {
-                                                        image: url(:/images/images/down_arrow.png);
-                                                        }
-
-                                                        QComboBox::down-arrow:on { /* shift the arrow when popup is open
-                                                        */
-                                                        top: 1px;
-                                                        left: 1px;
-                                                        }
-
-                                                        QComboBox QAbstractItemView {
-                                                        border: 2px solid darkgray;
-                                                        selection-background-color: lightgray;
-                                                        color: black;
-                                                        }
-                                                    </string>
-            </property>
             <property name="placeholderText">
              <string>Select a Base</string>
             </property>
@@ -459,72 +408,6 @@
            <widget class="QComboBox" name="base_item_combobox">
             <property name="enabled">
              <bool>false</bool>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">QComboBox {
-                                                        border: 1px solid gray;
-                                                        border-radius: 3px;
-                                                        padding: 1px 18px 1px 3px;
-                                                        min-width: 6em;
-                                                        color: black;
-                                                        }
-
-                                                        QComboBox::disabled {
-                                                        opacity: .5;
-                                                        }
-
-                                                        QComboBox:editable {
-                                                        background: white;
-                                                        }
-
-                                                        QComboBox:!editable, QComboBox::drop-down:editable {
-                                                        background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                                        stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
-                                                        stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
-                                                        }
-
-                                                        /* QComboBox gets the &quot;on&quot; state when the popup is
-                                                        open */
-                                                        QComboBox:!editable:on, QComboBox::drop-down:editable:on {
-                                                        background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                                        stop: 0 #D3D3D3, stop: 0.4 #D8D8D8,
-                                                        stop: 0.5 #DDDDDD, stop: 1.0 #E1E1E1);
-                                                        }
-
-                                                        QComboBox:on { /* shift the text when the popup opens */
-                                                        padding-top: 3px;
-                                                        padding-left: 4px;
-                                                        }
-
-                                                        QComboBox::drop-down {
-                                                        subcontrol-origin: padding;
-                                                        subcontrol-position: top right;
-                                                        width: 15px;
-
-                                                        border-left-width: 1px;
-                                                        border-left-color: darkgray;
-                                                        border-left-style: solid; /* just a single line */
-                                                        border-top-right-radius: 3px; /* same radius as the QComboBox */
-                                                        border-bottom-right-radius: 3px;
-                                                        color: black;
-                                                        }
-
-                                                        QComboBox::down-arrow {
-                                                        image: url(:/images/images/down_arrow.png);
-                                                        }
-
-                                                        QComboBox::down-arrow:on { /* shift the arrow when popup is open
-                                                        */
-                                                        top: 1px;
-                                                        left: 1px;
-                                                        }
-
-                                                        QComboBox QAbstractItemView {
-                                                        border: 2px solid darkgray;
-                                                        selection-background-color: lightgray;
-                                                        color: black;
-                                                        }
-                                                    </string>
             </property>
             <property name="placeholderText">
              <string>Select a Base Item</string>
@@ -566,12 +449,6 @@
             <property name="enabled">
              <bool>false</bool>
             </property>
-            <property name="styleSheet">
-             <string notr="true">QSpinBox {
-                                                        color: black;
-                                                        }
-                                                    </string>
-            </property>
             <property name="maximum">
              <number>100</number>
             </property>
@@ -599,12 +476,6 @@
            <widget class="QSpinBox" name="item_quality_spinbox">
             <property name="enabled">
              <bool>false</bool>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">QSpinBox {
-                                                        color: black;
-                                                        }
-                                                    </string>
             </property>
             <property name="maximum">
              <number>30</number>
@@ -710,6 +581,12 @@
             </property>
             <property name="checkable">
              <bool>true</bool>
+            </property>
+                  <property name="default">
+                      <bool>false</bool>
+                  </property>
+                  <property name="flat">
+                      <bool>false</bool>
             </property>
             <attribute name="buttonGroup">
              <string notr="true">item_influence_btn_group</string>
